Fix the rhba assembly codereview Test checkout performance.
Change-Id: I9c370eeb23e6c52cf85aa210ad14dcdfc6074e07